<resources>
    <string name="app_name">Time Tracker</string>
    <string name="usage_access">Usage Access</string>
    <string name="draw_over_other_apps">Draw over other Apps</string>
    <string name="hello">Hello !!</string>
    <string name="_1_hour">1 hour</string>
    <string name="next">Next</string>
    <string name="Explanation1"><![CDATA[We are here to accompany you in your race to win over phone addiction.We need some permissions to help you better & don\'t worry about your privacy ,Your usage data will be stored only on your device.]]></string>
    <string name="Explanation2">Tell us how much time you want to spend on your phone and Time tracker will help you meet that goal.</string>
    <string name="title_activity_usage_stats">usageStats</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chart">Chart</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_usagestats">usagestats</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_mainhome">mainhome</string>
</resources>
